--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -68,3 +68,36 @@
 .more-cards{
     padding-left: 6%;
 }
+
+@media (max-width: 1024px){
+    .hero-caption .title-cards{
+        display: none;
+    }
+
+    .hero-btns{
+        margin-bottom: 30px;
+    }
+}
+
+
+@media (max-width: 800px){
+    .hero-caption{
+        padding-left: 4%;
+    }
+
+    .caption-img{
+        margin-bottom: 10px;
+        width: 40%;
+    }
+
+    .hero-caption p{
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    .btn img{
+        width: 20px;
+    }
+    .more-cards{
+        padding-left: 4%;
+    }
+}
