--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -89,3 +89,14 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+@media (max-width: 500px){
+    .login{
+        padding: 15px 5%;
+    }
+
+    .login-form{
+        padding: 20px;
+        margin-top: 30px;
+    }
+}
