--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,17 @@ body{
   color: white;
   font-family: 'poppins';
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  position: fixed;
+  z-index: 1000; 
+}
+
+.content-container {
+  margin-top: 60px; 
+}
