--- a/frontend/src/pages/MovieDetail/MovieDetail.css
+++ b/frontend/src/pages/MovieDetail/MovieDetail.css
@@ -1,14 +1,14 @@
 .moviedetail{
-    display: relative;
+    display: block;
 }
 
-.moviedetail .back-buttons{
-    /* position: absolute; */
+/* .moviedetail .back-buttons{
+    position: relative;
     top: 20px;
     left: 20px;
     width: 50px;
     cursor: pointer;
-}
+} */
 
 .moviedetail h2{
     font-size: 36px;
