--- a/frontend/src/components/TitleCards/TitleCards.css
+++ b/frontend/src/components/TitleCards/TitleCards.css
@@ -24,11 +24,11 @@
     cursor: pointer;
 }
 
-.card-list .card{
+.card-list .custom-card{
     position: relative;
 }
 
-.card-list .card p{
+.card-list .custom-card p{
     position: absolute;
     bottom: 10px;
     right: 10px;
