--- a/frontend/src/components/Navbar/Navbar2.css
+++ b/frontend/src/components/Navbar/Navbar2.css
@@ -31,6 +31,83 @@
     cursor: pointer;
 }
 
+.search-box{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+}
+.input-search{
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all .5s ease-in-out;
+  background-color: #000809;
+  padding-right: 40px;
+  color:#fff;
+}
+.input-search::placeholder{
+  color:rgba(255,255,255,.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color:#ffffff ;
+  background-color:transparent;
+  pointer-events: painted;  
+}
+.btn-search:focus ~ .input-search{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+.input-search:focus{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.avatar {
+    width: 25px;
+}
+
+/* DROPDOWN */
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  
+  .dropdown-menu p {
+    margin: 0;
+    cursor: pointer;
+  }
+  
+  .dropdown-menu p:hover {
+    background-color: #f8f9fa;
+  }
+
+/* 
+
 .navbar-right .icons{
     width: 20px;
     cursor: pointer;
@@ -41,13 +118,6 @@
     width: 35px;
 }
 
-.navbar-profile{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-    position: relative;
-}
 
 .custom-navbar .custom-dropdown{
     position: absolute;
@@ -82,4 +152,4 @@
 
 @media (max-width: 500px){
 
-}
+} */
