--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,41 +1,112 @@
-.navbar{
-    width: 100%;
-    padding: 20px 6%;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
+.custom-navbar {
+    width: 100%;  
     font-size: 14px;
-    color: #e5e5e5;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.7) 10%, transparent);
+    background-image: linear-gradient(180deg, rgba(84, 82, 82, 0.7) 10%, transparent);
     z-index: 1;
 }
 
-.navbar-left{
-    display: flex;
-    align-items: center;
-    gap: 50px;
+.nav-items {
+     text-decoration: none;
+     padding: 0.2rem 0.75rem;
+     font-size: 16px;
+     font-weight: 600;
+     color: #fefefe;
+     position: relative;
+     transition: color 0.25s;
 }
 
-.navbar-left img{
-    width: 90px;
+.nav-items:hover {
+    background-color: #fefefe;
+    color: black;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 0.2rem 0.75rem;
 }
 
-.navbar-left ul{
-    display: flex;
-    list-style: none;
-    gap: 20px;
+.text-logo {
+    width: 125px;
 }
 
-.navbar-left ul li{
+.text-logo:hover {
     cursor: pointer;
 }
 
-.navbar-right{
-    display: flex;
-    gap: 20px;
-    align-items: center;
-
+.search-box{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
 }
+.input-search{
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all .5s ease-in-out;
+  background-color: #585959da;
+  padding-right: 40px;
+  color:#fff;
+}
+.input-search::placeholder{
+  color:rgba(255,255,255,.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color:#ffffff ;
+  background-color:transparent;
+  pointer-events: painted;  
+}
+.btn-search:focus ~ .input-search{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+.input-search:focus{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.avatar {
+    width: 25px;
+}
+
+/* DROPDOWN */
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  
+  .dropdown-menu p {
+    margin: 0;
+    cursor: pointer;
+  }
+  
+  .dropdown-menu p:hover {
+    background-color: #f8f9fa;
+  }
+
+/* 
 
 .navbar-right .icons{
     width: 20px;
@@ -47,15 +118,8 @@
     width: 35px;
 }
 
-.navbar-profile{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-    position: relative;
-}
 
-.navbar .dropdown{
+.custom-navbar .custom-dropdown{
     position: absolute;
     top: 100%;
     right: 0;
@@ -68,12 +132,12 @@
     display: none;
 }
 
-.navbar .dropdown p{
+.navbar .custom-dropdown p{
     font-size: 13px;
     cursor: pointer;
 }
 
-.navbar-profile:hover .dropdown{
+.navbar-profile:hover .custom-dropdown{
     display: block;
 }
 
@@ -82,26 +146,10 @@
 }
 
 @media (max-width: 800px){
-    .navbar{
-        padding: 20px 4%;
 
-    }
-    .navbar-left ul{
-        display: none;
-    }
-
-    .navba img{
-        height: 25px;
-    }
 }
 
 
 @media (max-width: 500px){
-    .navba img{
-        height: 20px;
-    }
 
-    .navbar-right{
-        gap: 10px;
-    }
-}
+} */
