--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .custom-navbar {
     width: 100%;  
     font-size: 14px;
-    background-image: linear-gradient(180deg, rgba(84, 82, 82, 0.7) 10%, transparent);
+    background-image: linear-gradient(180deg, rgba(77, 78, 78, 0.7));
     z-index: 1;
 }
 
