--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,31 +6,29 @@
 }
 
 .nav-items {
-   text-decoration: none;
    padding: 0.2rem 0.75rem;
    font-size: 16px;
-   font-weight: 600;
-   color: #fefefe;
+   color: rgb(170, 170, 170);
+   font-weight: 500;
    position: relative;
    transition: color 0.25s;
 }
 
 .nav-items:hover {
-  background-color: #dcdada;
-  color: black;
-  border-radius: 10px;
   cursor: pointer;
-  padding: 0.2rem 0.75rem;
+  color: rgb(226, 223, 223);
+  font-weight: 800;
 }
 
 .nav-items.active {
-  color: black;
-  background-color: #dcdada;
-  border-radius: 10px;
+  color: rgb(226, 223, 223);
+  font-weight: 800;
 }
 
 .icons {
-  width: 18px;
+  width: 22px;
+  margin-left: 10px;
+  margin-right: 15px;
 }
 
 .icons:hover {
